Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -133,9 +133,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "scatter",
+         "uid": "d162dea0-1aab-11e9-a03e-a3f3a6c4c084"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"9c8b040d-f313-4476-a389-03d99ce4e334\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9c8b040d-f313-4476-a389-03d99ce4e334\", [{\"type\": \"scatter\", \"uid\": \"d1a4f524-1aab-11e9-a03e-a3f3a6c4c084\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"9c8b040d-f313-4476-a389-03d99ce4e334\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9c8b040d-f313-4476-a389-03d99ce4e334\", [{\"type\": \"scatter\", \"uid\": \"d1a4f524-1aab-11e9-a03e-a3f3a6c4c084\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([\n",
     "    {}\n",
