Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -189,11 +189,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "scatter",
+         "uid": "f51823f0-1aab-11e9-a03e-a3f3a6c4c084",
+         "x": [
+          2,
+          2,
+          3,
+          4
+         ],
+         "y": [
+          1,
+          2,
+          3,
+          4
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"66d45b26-3855-49a5-bc89-433b5156411b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"66d45b26-3855-49a5-bc89-433b5156411b\", [{\"x\": [2, 2, 3, 4], \"y\": [1, 2, 3, 4], \"type\": \"scatter\", \"uid\": \"f52690b6-1aab-11e9-a03e-a3f3a6c4c084\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"66d45b26-3855-49a5-bc89-433b5156411b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"66d45b26-3855-49a5-bc89-433b5156411b\", [{\"x\": [2, 2, 3, 4], \"y\": [1, 2, 3, 4], \"type\": \"scatter\", \"uid\": \"f52690b6-1aab-11e9-a03e-a3f3a6c4c084\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4]}\n",
+    "trace = {'x': [2, 2, 3, 4], 'y': [1, 2, 3, 4]}\n",
     "\n",
     "plotly.offline.iplot([\n",
     "    trace\n",
